--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -148,12 +148,12 @@
 	<system:String x:Key="mainRibbon.Manage.Metadata.Worktype.Export.Header">Exporteren</system:String>
 	<system:String x:Key="mainRibbon.Manage.Metadata.Worktype.Export.Tooltip">Exporteer werksoorten</system:String>
 	<system:String x:Key="mainRibbon.Manage.Metadata.Worktype.Import.Header">Importeren</system:String>
-	<system:String x:Key="mainRibbon.Manage.Metadata.Worktype.Import.Tooltip">Importeer werksoorten</system:String>
-	<!--#endregion-->
-
+    <system:String x:Key="mainRibbon.Manage.Metadata.Worktype.Import.Tooltip">Importeer werksoorten</system:String>
+    <!--#endregion-->
+    
 	<!--#region General-->
 	<!--#region Buttons-->
-	<system:String x:Key="Export.Button.Label">Selecteer map</system:String>
+	<system:String x:Key="Export.Button.Label">Exporteer</system:String>
 	<system:String x:Key="Export.Button.Tooltip">Selecteer de map waarin het, te exporteren, CSV bestand komt te staan</system:String>
 	<system:String x:Key="Export.Button.Foldername">Geen map geselecteerd!</system:String>
 	<!--#endregion-->
@@ -180,7 +180,12 @@
 	<system:String x:Key="Export.Brands.Button.Label">Merk</system:String>
 	<system:String x:Key="Export.Brands.Button.Tooltip">Selecteer het te importeren CSV bestand met merken</system:String>
 	<system:String x:Key="Export.Brands.Empty">Er zijn geen merken beschikbaar om te exporteren</system:String>
-	<!--#endregion-->
+
+    <!--#region Buttons-->
+    <system:String x:Key="Export.Brands.Button.Text">Merken</system:String>
+    <!--#endregion-->
+
+    <!--#endregion-->
 
 	<!--#region Import page-->
 	<system:String x:Key="Import.Brands.Title">Merken Importeren</system:String>
@@ -195,6 +200,121 @@
 	<!--#region Maintenance page-->
 	<!--#endregion-->
 	<!--#endregion-->
+    
+    <!--#region Category-->
+    <!--#region Export page-->
+    <system:String x:Key="Export.Category.Title">Categoriën Exporteren</system:String>
+    <system:String x:Key="Export.Category.Subtitle">Exporteer categoriën naar een CSV bestand</system:String>
+    <system:String x:Key="Export.Category.Filename">Categoriën</system:String>
+    <system:String x:Key="Export.Category.Button.Label">Categorie</system:String>
+    <system:String x:Key="Export.Category.Button.Tooltip">Selecteer het te importeren CSV bestand met categoriën</system:String>
+    <system:String x:Key="Export.Category.Empty">Er zijn geen categoriën beschikbaar om te exporteren</system:String>
+
+    <!--#region Buttons-->
+    <system:String x:Key="Export.Category.Button.Text">Categoriën</system:String>
+    <!--#endregion-->
+    <!--#endregion-->
+
+    <!--#region Import page-->
+    <system:String x:Key="Import.Category.Title">Categoriën Importeren</system:String>
+    <system:String x:Key="Import.Category.Subtitle">Importeer categoriën uit een CSV bestand</system:String>
+    <system:String x:Key="Import.Category.Filename">Categorie</system:String>
+    <system:String x:Key="Import.Category.Messagebox.Error.Existing.Long">Ingelezen categorie bestaat al in de tabel</system:String>
+    <system:String x:Key="Import.Category.Messagebox.Error.Existing.Short">Categorie Bestaat al</system:String>
+    <system:String x:Key="Import.Category.Button.Label">Categorie</system:String>
+    <system:String x:Key="Import.Category.Button.Tooltip">Selecteer het te importeren CSV bestand met categoriën</system:String>
+    <!--#endregion-->
+
+    <!--#region Maintenance page-->
+    <!--#endregion-->
+    <!--#endregion-->
+    
+    <!--#region Country-->
+    <!--#region Export page-->
+    <system:String x:Key="Export.Country.Title">Landen Exporteren</system:String>
+    <system:String x:Key="Export.Country.Subtitle">Exporteer landen naar een CSV bestand</system:String>
+    <system:String x:Key="Export.Country.Filename">Landen</system:String>
+    <system:String x:Key="Export.Country.Button.Label">Land</system:String>
+    <system:String x:Key="Export.Country.Button.Tooltip">Selecteer het te importeren CSV bestand met landen</system:String>
+    <system:String x:Key="Export.Country.Empty">Er zijn geen landen beschikbaar om te exporteren</system:String>
+
+    <!--#region Buttons-->
+    <system:String x:Key="Export.Country.Button.Text">Landen</system:String>
+    <!--#endregion-->
+    <!--#endregion-->
+
+    <!--#region Import page-->
+    <system:String x:Key="Import.Country.Title">Landen Importeren</system:String>
+    <system:String x:Key="Import.Country.Subtitle">Importeer landen uit een CSV bestand, hierin staan uitsluitend landnamen</system:String>
+    <system:String x:Key="Import.Country.Filename">Importeer landen</system:String>
+    <system:String x:Key="Import.Country.Messagebox.Error.Existing.Long">Ingelezen land bestaat al in de tabel</system:String>
+    <system:String x:Key="Import.Country.Messagebox.Error.Existing.Short">Land Bestaat al</system:String>
+    <system:String x:Key="Import.Country.Button.Label">Land</system:String>
+    <system:String x:Key="Import.Country.Button.Tooltip">Selecteer het te importeren CSV bestand met landen</system:String>
+    <!--#endregion-->
+
+    <!--#region Maintenance page-->
+    <!--#endregion-->
+    <!--#endregion-->
+    
+    <!--#region Currency-->
+    <!--#region Export page-->
+    <system:String x:Key="Export.Currency.Title">Valuta Exporteren</system:String>
+    <system:String x:Key="Export.Currency.Subtitle">Exporteer valuta naar een CSV bestand</system:String>
+    <system:String x:Key="Export.Currency.Filename">Valuta</system:String>
+    <system:String x:Key="Export.Currency.Button.Label">Valuta</system:String>
+    <system:String x:Key="Export.Currency.Button.Tooltip">Selecteer het te importeren CSV bestand met valuta</system:String>
+    <system:String x:Key="Export.Currency.Empty">Er zijn geen valuta beschikbaar om te exporteren</system:String>
+
+    <!--#region Buttons-->
+    <system:String x:Key="Export.Currency.Button.Text">Valuta</system:String>
+    <!--#endregion-->
+
+    <!--#endregion-->
+
+    <!--#region Import page-->
+    <system:String x:Key="Import.Currency.Title">Valuta Importeren</system:String>
+    <system:String x:Key="Import.Currency.Subtitle">Importeer valuta uit een CSV bestand, hierin staan uitsluitend valutanamen</system:String>
+    <system:String x:Key="Import.Currency.Filename">Importeer valuta</system:String>
+    <system:String x:Key="Import.Currency.Messagebox.Error.Existing.Long">Ingelezen valuta bestaat al in de tabel</system:String>
+    <system:String x:Key="Import.Currency.Messagebox.Error.Existing.Short">Valuta Bestaat al</system:String>
+    <system:String x:Key="Import.Currency.Button.Label">Valuta</system:String>
+    <system:String x:Key="Import.Currency.Button.Tooltip">Selecteer het te importeren CSV bestand met valuta</system:String>
+    <!--#endregion-->
+
+    <!--#region Maintenance page-->
+    <!--#endregion-->
+    <!--#endregion-->
+    
+    <!--#region Sorage Location-->
+    <!--#region Export page-->
+    <system:String x:Key="Export.StorageLocation.Title">Voorraadlocaties Exporteren</system:String>
+    <system:String x:Key="Export.StorageLocation.Subtitle">Exporteer voorraadlocaties naar een CSV bestand</system:String>
+    <system:String x:Key="Export.StorageLocation.Filename">Voorraadlocaties</system:String>
+    <system:String x:Key="Export.StorageLocation.Button.Label">Voorraadlocatie</system:String>
+    <system:String x:Key="Export.StorageLocation.Button.Tooltip">Selecteer het te importeren CSV bestand met voorraadlocaties</system:String>
+    <system:String x:Key="Export.StorageLocation.Empty">Er zijn geen voorraadlocaties beschikbaar om te exporteren</system:String>
+
+    <!--#region Buttons-->
+    <system:String x:Key="Export.StorageLocation.Button.Text">Voorraadlocaties</system:String>
+    <!--#endregion-->
+
+    <!--#endregion-->
+
+    <!--#region Import page-->
+    <system:String x:Key="Import.StorageLocation.Title">Voorraadlocaties Importeren</system:String>
+    <system:String x:Key="Import.StorageLocation.Subtitle">Importeer voorraadlocaties uit een CSV bestand, hierin staan uitsluitend voorraadlocatienamen</system:String>
+    <system:String x:Key="Import.StorageLocation.Filename">Importeer voorraadlocaties</system:String>
+    <system:String x:Key="Import.StorageLocation.Messagebox.Error.Existing.Long">Ingelezen voorraadlocatie bestaat al in de tabel</system:String>
+    <system:String x:Key="Import.StorageLocation.Messagebox.Error.Existing.Short">Voorraadlocatie Bestaat al</system:String>
+    <system:String x:Key="Import.StorageLocation.Button.Label">Voorraadlocatie</system:String>
+    <system:String x:Key="Import.StorageLocation.Button.Tooltip">Selecteer het te importeren CSV bestand met voorraadlocaties</system:String>
+    <!--#endregion-->
+
+    <!--#region Maintenance page-->
+    <!--#endregion-->
+    <!--#endregion-->
+    <!--#endregion-->
 	<!--#endregion-->
 
 	<!--#region Settings-->
