--- a/Modelbouwer/View/CurrencyExport.xaml
+++ b/Modelbouwer/View/CurrencyExport.xaml
@@ -1,16 +1,113 @@
 ﻿<Page
-	x:Class="Modelbouwer.View.CurrencyExport"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:Modelbouwer.View"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Title="CurrencyExport"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
-	mc:Ignorable="d">
+    x:Class="Modelbouwer.View.CurrencyExport"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Modelbouwer.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="CurrencyExport"
+    mc:Ignorable="d">
 
-	<Grid>
-		<TextBlock Text="CurrencyExport" />
-	</Grid>
+    <Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="90" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
+
+            <!--  region Title of the page  -->
+            <StackPanel Grid.Row="0" Orientation="Vertical">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2*" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        Grid.Column="0"
+                        Style="{DynamicResource Title}"
+                        Text="{StaticResource Export.Currency.Title}" />
+                </Grid>
+                <Path Style="{DynamicResource TitleLine}" />
+                <TextBlock
+                    Grid.Column="0"
+                    Style="{DynamicResource SubTitle}"
+                    Text="{StaticResource Export.Currency.Subtitle}" />
+            </StackPanel>
+            <!--  endregion Title of the page  -->
+
+            <!--#region Folder selection area-->
+            <StackPanel Grid.Row="1" Orientation="Vertical">
+                <Grid Margin="0,25">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40" />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="160" />
+                        <ColumnDefinition Width="50" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Button
+                        x:Name="btnExport"
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Width="150"
+                        Height="40"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
+                        Click="Export"
+                        Style="{StaticResource ButtonRoundedWhite}"
+                        ToolTip="{StaticResource Export.Button.Tooltip}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource Export}" />
+                            <StackPanel Margin="5,0,0,0" Orientation="Vertical">
+                                <TextBlock HorizontalAlignment="Center" Text="{StaticResource Export.Button.Label}" />
+                                <TextBlock HorizontalAlignment="Center" Text="{StaticResource Export.Currency.Button.Text}" />
+                            </StackPanel>
+                        </StackPanel>
+                    </Button>
+                    <Button
+                        x:Name="btnChooseFolder"
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Click="SelectFolder"
+                        Style="{DynamicResource ButtonRoundedWhite}">
+                        <Image Source="{StaticResource searchfolder}" Stretch="Uniform" />
+                    </Button>
+                    <TextBlock
+                        Name="dispFolderName"
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Width="Auto"
+                        Margin="15,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="{StaticResource Export.Button.Foldername}" />
+                </Grid>
+            </StackPanel>
+            <!--#endregion-->
+
+            <!--#region Currency export Status bar-->
+            <DockPanel
+                Grid.Row="3"
+                Height="30"
+                Margin="5"
+                VerticalAlignment="Center"
+                Background="LightGray">
+                <Grid>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Export.Statusline.Text}" />
+                        <TextBlock
+                            Name="dispStatusLine"
+                            Style="{DynamicResource Status.Description}"
+                            Text="{DynamicResource Export.Statusline.Description}" />
+                    </StackPanel>
+                </Grid>
+            </DockPanel>
+            <!--#endregion-->
+        </Grid>
+    </Border>
 </Page>
