--- a/Modelbouwer/View/LocationExport.xaml
+++ b/Modelbouwer/View/LocationExport.xaml
@@ -6,11 +6,106 @@
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Title="LocationExport"
-	d:DesignHeight="450"
-	d:DesignWidth="800"
 	mc:Ignorable="d">
 
-	<Grid>
-		<TextBlock Text="LocationExport" />
-	</Grid>
+    <Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50" />
+                <RowDefinition Height="90" />
+                <RowDefinition Height="*" />
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
+
+            <!--  region Title of the page  -->
+            <StackPanel Grid.Row="0" Orientation="Vertical">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="2*" />
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock
+                        Grid.Column="0"
+                        Style="{DynamicResource Title}"
+                        Text="{StaticResource Export.StorageLocation.Title}" />
+                </Grid>
+                <Path Style="{DynamicResource TitleLine}" />
+                <TextBlock
+                    Grid.Column="0"
+                    Style="{DynamicResource SubTitle}"
+                    Text="{StaticResource Export.StorageLocation.Subtitle}" />
+            </StackPanel>
+            <!--  endregion Title of the page  -->
+
+            <!--#region Folder selection area-->
+            <StackPanel Grid.Row="1" Orientation="Vertical" >
+                <Grid Margin="0,25">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="40" />
+                    </Grid.RowDefinitions>
+
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="160" />
+                        <ColumnDefinition Width="50" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Button
+                    x:Name="btnExport"
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Width="150"
+                    Height="40"
+                    Margin="5,0,0,0"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Top"
+                    Click="Export"
+                    Style="{StaticResource ButtonRoundedWhite}"
+                    ToolTip="{StaticResource Export.Button.Tooltip}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource Export}" />
+                            <StackPanel Margin="5,0,0,0" Orientation="Vertical">
+                                <TextBlock HorizontalAlignment="Center" Text="{StaticResource Export.Button.Label}" />
+                                <TextBlock HorizontalAlignment="Center" Text="{StaticResource Export.StorageLocation.Button.Text}" />
+                            </StackPanel>
+                        </StackPanel>
+                    </Button>
+                    <Button
+                    x:Name="btnChooseFolder"
+                    Grid.Row="0"
+                    Grid.Column="1"
+                    Click="SelectFolder"
+                    Style="{DynamicResource ButtonRoundedWhite}">
+                        <Image Source="{StaticResource searchfolder}" Stretch="Uniform" />
+                    </Button>
+                    <TextBlock
+                    Name="dispFolderName"
+                    Grid.Row="0"
+                    Grid.Column="2"
+                    Width="Auto" Margin="15,0,0,0"
+                    VerticalAlignment="Center"
+                    Text="{StaticResource Export.Button.Foldername}" />
+                </Grid>
+            </StackPanel>
+            <!--#endregion-->
+
+            <!--#region StorageLocation export Status bar-->
+            <DockPanel Grid.Row="3"
+                Height="30"
+                Margin="5"
+                VerticalAlignment="Center"
+                Background="LightGray">
+                <Grid>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Export.Statusline.Text}" />
+                        <TextBlock
+                            Name="dispStatusLine"
+                            Style="{DynamicResource Status.Description}"
+                            Text="{DynamicResource Export.Statusline.Description}" />
+                    </StackPanel>
+                </Grid>
+            </DockPanel>
+            <!--#endregion-->
+        </Grid>
+    </Border>
 </Page>
