--- a/Modelbouwer/View/UnitManagement.xaml
+++ b/Modelbouwer/View/UnitManagement.xaml
@@ -1,15 +1,16 @@
-﻿<Window
-	x:Class="Modelbouwer.View.UnitManagement"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:Modelbouwer.View"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Title="UnitManagement"
-	Width="800"
-	Height="450"
-	mc:Ignorable="d">
-	<Grid>
-		<TextBlock Text="UnitManagement" />
-	</Grid>
-</Window>
+﻿<Page
+    x:Class="Modelbouwer.View.UnitManagement"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Modelbouwer.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="UnitManagement"
+    d:DesignHeight="450"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+
+    <Grid>
+        <TextBlock Text="UnitManagement" />
+    </Grid>
+</Page>
