--- a/Modelbouwer/View/BrandExport.xaml
+++ b/Modelbouwer/View/BrandExport.xaml
@@ -1,83 +1,122 @@
 ﻿<Page
-	x:Class="Modelbouwer.View.BrandExport"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:Modelbouwer.View"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	Title="BrandExport"
-	d:DesignHeight="800"
-	d:DesignWidth="1000"
-	mc:Ignorable="d">
+    x:Class="Modelbouwer.View.BrandExport"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:Modelbouwer.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="BrandExport"
+    mc:Ignorable="d">
 
-	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
-	<Grid>
-			<StackPanel Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+    <Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}"
+            Style="{DynamicResource MainBorder}">
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="50"/>
+                <RowDefinition Height="90"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="50"/>
+            </Grid.RowDefinitions>
 
-				<!--  region Title of the page  -->
-				<Grid>
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*" />
-						<ColumnDefinition Width="2*" />
-					</Grid.ColumnDefinitions>
+            <!--  region Title of the page  -->
+            <StackPanel Grid.Row="0"
+                    Orientation="Vertical">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
 
-					<TextBlock Grid.Column="0"
-                               Style="{DynamicResource Title}"
-                               Text="{StaticResource Export.Brands.Title}" />
-				</Grid>
-				<Path Style="{DynamicResource TitleLine}" />
-				<TextBlock Grid.Column="0"
-                           Style="{DynamicResource SubTitle}"
-                           Text="{StaticResource Export.Brands.Subtitle}" />
-				<!--  endregion Title of the page  -->
-				
-				<!--#region Folder selection area-->
-				<Grid Margin="0,25">
-					<Grid.RowDefinitions>
-						<RowDefinition Height="30" />
-					</Grid.RowDefinitions>
+                    <TextBlock
+                        Grid.Column="0"
+                        Style="{DynamicResource Title}"
+                        Text="{StaticResource Export.Brands.Title}"/>
+                </Grid>
+                <Path Style="{DynamicResource TitleLine}"/>
+                <TextBlock
+                    Grid.Column="0"
+                    Style="{DynamicResource SubTitle}"
+                    Text="{StaticResource Export.Brands.Subtitle}"/>
+            </StackPanel>
+            <!--  endregion Title of the page  -->
 
-					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="150" />
-						<ColumnDefinition Width="*" />
-					</Grid.ColumnDefinitions>
-					<Button x:Name="btnBrowseFolder"
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Width="130"
-                            Height="30"
-                            Margin="5,0,0,0"
-                            HorizontalAlignment="Left"
-                            VerticalAlignment="Top"
-                            Click="SelectFolder"
-                            Content="{StaticResource Export.Button.Label}"
-                            ToolTip="{StaticResource Export.Button.Tooltip}" />
-					<TextBlock Name="dispFolderName"
-                               Grid.Row="0"
-                               Grid.Column="1"
-                               Width="Auto"
-                               VerticalAlignment="Center"
-                               Text="{StaticResource Export.Button.Foldername}" />
-				</Grid>
-				<!--#endregion-->
+            <!--#region Folder selection area-->
+            <StackPanel Grid.Row="1"
+                    Orientation="Vertical">
+                <Grid Margin="0,25">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50"/>
+                    </Grid.RowDefinitions>
 
-				<!--#region Brands export Status bar-->
-				<DockPanel Height="30"
-                           Margin="5"
-                           VerticalAlignment="Center"
-                           Background="LightGray">
-					<Grid>
-						<StackPanel Orientation="Horizontal">
-							<TextBlock Style="{DynamicResource Status.Label}"
-                                       Text="{StaticResource Export.Statusline.Text}" />
-							<TextBlock Name="dispStatusLine" Style="{DynamicResource Status.Description}"
-                                       Text="{DynamicResource Export.Statusline.Description}" />
-						</StackPanel>
-					</Grid>
-				</DockPanel>
-				<!--#endregion Time entry import Status bar-->
-			</StackPanel>
-		
-	</Grid>
-	</Border>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition x:Name="columnExportButton"
+                                Width="{StaticResource Column.Export.Button.Width}"/>
+                        <ColumnDefinition x:Name="columnSelectFolderButton"
+                                Width="{StaticResource Column.SelectFolder.Button.Width}"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button
+                        x:Name="btnExport"
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Width="150"
+                        Height="50"
+                        Margin="5,0,0,0"
+                        HorizontalAlignment="Left"
+                        VerticalAlignment="Top"
+                        Click="Export"
+                        Style="{StaticResource ButtonRoundedWhite}"
+                        ToolTip="{StaticResource Export.Button.Tooltip}">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Source="{StaticResource Export}"/>
+                            <StackPanel Margin="5,0,0,0"
+                                    Orientation="Vertical">
+                                <TextBlock HorizontalAlignment="Center"
+                                        Text="{StaticResource Export.Button.Label}"/>
+                                <TextBlock HorizontalAlignment="Center"
+                                        Text="{StaticResource Export.Brands.Button.Text}"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Button>
+                    <Button
+                        x:Name="btnChooseFolder"
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Click="SelectFolder"
+                        Style="{DynamicResource ButtonRoundedWhite}">
+                        <Image Source="{StaticResource searchfolder}"
+                                Stretch="Uniform"/>
+                    </Button>
+                    <TextBlock
+                        Name="dispFolderName"
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Width="Auto"
+                            Margin="15,0,0,0"
+                        VerticalAlignment="Center"
+                        Text="{StaticResource Export.Button.Foldername}"/>
+                </Grid>
+            </StackPanel>
+            <!--#endregion-->
+
+            <!--#region Brands export Status bar-->
+            <DockPanel Grid.Row="3"
+                       Height="30"
+                       Margin="5"
+                       VerticalAlignment="Center"
+                       Background="LightGray">
+                <Grid>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Style="{DynamicResource Status.Label}"
+                                Text="{StaticResource Export.Statusline.Text}"/>
+                        <TextBlock
+                            Name="dispStatusLine"
+                            Style="{DynamicResource Status.Description}"
+                            Text="{DynamicResource Export.Statusline.Description}"/>
+                    </StackPanel>
+                </Grid>
+            </DockPanel>
+            <!--#endregion-->
+        </Grid>
+    </Border>
 </Page>
