--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -225,7 +225,7 @@
 	<system:String x:Key="Import.Brands.Button.Label">Merk</system:String>
 	<system:String x:Key="Import.Brands.Button.Tooltip">Selecteer het te importeren CSV bestand met merken (bestand moet een geldige header bevatten, gebruik de kop CSV voorbereiden voor een bestand met de header)</system:String>
 	<system:String x:Key="Import.Brands.FileDialog.Description">Selecteer het te importeren CSV bestand met merken</system:String>
-	<system:String x:Key="Import.Brands.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Brands.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Button-->
 	<system:String x:Key="Import.Brands.Button.Text">Merken</system:String>
@@ -259,7 +259,7 @@
 	<system:String x:Key="Import.Category.Button.Label">Categorie</system:String>
 	<system:String x:Key="Import.Category.Button.Tooltip">Selecteer het te importeren CSV bestand met categoriën</system:String>
 	<system:String x:Key="Import.Category.FileDialog.Description">Selecteer het te importeren CSV bestand met categorieën</system:String>
-	<system:String x:Key="Import.Category.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Category.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Category.Button.Text">Categoriën</system:String>
@@ -293,7 +293,7 @@
 	<system:String x:Key="Import.Country.Button.Label">Land</system:String>
 	<system:String x:Key="Import.Country.Button.Tooltip">Selecteer het te importeren CSV bestand met landen</system:String>
 	<system:String x:Key="Import.Country.FileDialog.Description">Selecteer het te importeren CSV bestand met landen</system:String>
-	<system:String x:Key="Import.Country.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Country.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Country.Button.Text">Landen</system:String>
@@ -327,7 +327,7 @@
 	<system:String x:Key="Import.Currency.Button.Label">Valuta</system:String>
 	<system:String x:Key="Import.Currency.Button.Tooltip">Selecteer het te importeren CSV bestand met valuta</system:String>
 	<system:String x:Key="Import.Currency.FileDialog.Description">Selecteer het te importeren CSV bestand met valuta</system:String>
-	<system:String x:Key="Import.Currency.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Currency.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Currency.Button.Text">Valuta</system:String>
@@ -363,7 +363,7 @@
 	<system:String x:Key="Import.StorageLocation.Button.Label">Voorraadlocatie</system:String>
 	<system:String x:Key="Import.StorageLocation.Button.Tooltip">Selecteer het te importeren CSV bestand met voorraadlocaties</system:String>
 	<system:String x:Key="Import.StorageLocation.FileDialog.Description">Selecteer het te importeren CSV bestand met voorraadlocaties</system:String>
-	<system:String x:Key="Import.StorageLocation.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.StorageLocation.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.StorageLocation.Button.Text">Voorraadlocaties</system:String>
@@ -398,7 +398,7 @@
 	<system:String x:Key="Import.Product.Button.Label">Artikel</system:String>
 	<system:String x:Key="Import.Product.Button.Tooltip">Selecteer het te importeren CSV bestand met artikelen</system:String>
 	<system:String x:Key="Import.Product.FileDialog.Description">Selecteer het te importeren CSV bestand met artikelen</system:String>
-	<system:String x:Key="Import.Product.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Product.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Product.Button.Text">Artikelen</system:String>
@@ -433,7 +433,7 @@
 	<system:String x:Key="Import.ProductSupplier.Button.Label">Productleverancier</system:String>
 	<system:String x:Key="Import.ProductSupplier.Button.Tooltip">Selecteer het te importeren CSV bestand met leveranciers per product</system:String>
 	<system:String x:Key="Import.ProductSupplier.FileDialog.Description">Selecteer het te importeren CSV bestand met leveranciers per product</system:String>
-	<system:String x:Key="Import.ProductSupplier.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.ProductSupplier.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.ProductSupplier.Button.Text">Leveranciers pp</system:String>
@@ -468,7 +468,7 @@
 	<system:String x:Key="Import.Project.Button.Label">Project</system:String>
 	<system:String x:Key="Import.Project.Button.Tooltip">Selecteer het te importeren CSV bestand met projecten</system:String>
 	<system:String x:Key="Import.Project.FileDialog.Description">Selecteer het te importeren CSV bestand met projecten</system:String>
-	<system:String x:Key="Import.Project.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Project.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Project.Button.Text">Projecten</system:String>
@@ -504,7 +504,7 @@
 	<system:String x:Key="Import.Supplier.Button.Label">Leverancier</system:String>
 	<system:String x:Key="Import.Supplier.Button.Tooltip">Selecteer het te importeren CSV bestand met leveranciers</system:String>
 	<system:String x:Key="Import.Supplier.FileDialog.Description">Selecteer het te importeren CSV bestand met leveranciers</system:String>
-	<system:String x:Key="Import.Supplier.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Supplier.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Supplier.Button.Text">Leveranciers</system:String>
@@ -539,7 +539,7 @@
 	<system:String x:Key="Import.SupplierContact.Button.Label">Contact personen</system:String>
 	<system:String x:Key="Import.SupplierContact.Button.Tooltip">Selecteer het te importeren CSV bestand met contact personen per leverancier</system:String>
 	<system:String x:Key="Import.SupplierContact.FileDialog.Description">Selecteer het te importeren CSV bestand met contactpersonen per leverancier</system:String>
-	<system:String x:Key="Import.SupplierContact.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.SupplierContact.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.SupplierContact.Button.Text">Contact p.l.</system:String>
@@ -574,7 +574,7 @@
 	<system:String x:Key="Import.SupplierContactFunction.Button.Label">Functies</system:String>
 	<system:String x:Key="Import.SupplierContactFunction.Button.Tooltip">Selecteer het te importeren CSV bestand met functies</system:String>
 	<system:String x:Key="Import.SupplierContactFunction.FileDialog.Description">Selecteer het te importeren CSV bestand met functies</system:String>
-	<system:String x:Key="Import.SupplierContactFunction.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.SupplierContactFunction.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.SupplierContactFunction.Button.Text">Functies</system:String>
@@ -609,7 +609,7 @@
 	<system:String x:Key="Import.Time.Button.Label">Urenregistratie</system:String>
 	<system:String x:Key="Import.Time.Button.Tooltip">Selecteer het te importeren CSV bestand met urenregistratie</system:String>
 	<system:String x:Key="Import.Time.FileDialog.Description">Selecteer het te importeren CSV bestand met urenregistratie</system:String>
-	<system:String x:Key="Import.Time.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Time.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Time.Button.Text">Urenregistratie</system:String>
@@ -644,7 +644,7 @@
 	<system:String x:Key="Import.Unit.Button.Label">Eenheden</system:String>
 	<system:String x:Key="Import.Unit.Button.Tooltip">Selecteer het te importeren CSV bestand met eenheden</system:String>
 	<system:String x:Key="Import.Unit.FileDialog.Description">Selecteer het te importeren CSV bestand met eenheden</system:String>
-	<system:String x:Key="Import.Unit.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.Unit.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.Unit.Button.Text">Eenheden</system:String>
@@ -679,7 +679,7 @@
 	<system:String x:Key="Import.WorkType.Button.Label">Werksoorten</system:String>
 	<system:String x:Key="Import.WorkType.Button.Tooltip">Selecteer het te importeren CSV bestand met werksoorten</system:String>
 	<system:String x:Key="Import.WorkType.FileDialog.Description">Selecteer het te importeren CSV bestand met werksoortenn</system:String>
-	<system:String x:Key="Import.WorkType.FileDialog.FilterTest">CSV Bestanden</system:String>
+	<system:String x:Key="Import.WorkType.FileDialog.FilterText">CSV Bestanden</system:String>
 
 	<!--#region Buttons-->
 	<system:String x:Key="Import.WorkType.Button.Text">Werksoorten</system:String>
