--- a/Modelbouwer/View/CategoryManagement.xaml
+++ b/Modelbouwer/View/CategoryManagement.xaml
@@ -3,6 +3,8 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels" 
+	d:DataContext="{d:DesignInstance Type=viewmodels:BrandViewModel}"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	Title="CategoryManagement"
