--- a/Modelbouwer/View/CountryManagement.xaml
+++ b/Modelbouwer/View/CountryManagement.xaml
@@ -4,13 +4,123 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:Modelbouwer.View"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:CountryViewModel}"
 	Title="CountryManagement"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
 	mc:Ignorable="d">
 
 	<Grid>
-		<TextBlock Text="CountryManagement" />
+		<Grid.RowDefinitions>
+			<RowDefinition Height="95" />
+			<RowDefinition Height="32" />
+			<RowDefinition Height="10" />
+			<RowDefinition Height="40" />
+			<RowDefinition Height="*" />
+			<RowDefinition Height="20" />
+		</Grid.RowDefinitions>
+
+		<!--#region Title of the page-->
+		<StackPanel
+			Grid.Row="0"
+			Margin="10,0,10,0"
+			Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+			<TextBlock Style="{DynamicResource DefaultTitle}" Text="{StaticResource Edit.Country.Title}" />
+			<Canvas>
+				<Path Style="{DynamicResource DefaultTitleLine}" />
+			</Canvas>
+			<TextBlock Style="{DynamicResource DefaultSubTitle}" Text="{StaticResource Edit.Country.Subtitle}" />
+		</StackPanel>
+		<!--#endregion-->
+
+		<!--#region Hidden fields-->
+		<TextBox
+			x:Name="inpCountryId"
+			Grid.Row="2"
+			Style="{DynamicResource HiddenTextBox}"
+			Text="{Binding SelectedCountryId, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+		<!--#endregion-->
+
+		<!--#region Datafields-->
+		<Grid Grid.Row="1">
+			<!--#region Colomn defenition-->
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition Width="100" />
+				<ColumnDefinition Width="480" />
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
+			<!--#endregion-->
+
+			<Label Content="{StaticResource Edit.Country.Name.Label}" Style="{DynamicResource DefaultLabel}" />
+
+			<TextBox
+				x:Name="inpCountryName"
+				Grid.Column="1"
+				Width="450"
+				Style="{DynamicResource DefaultTextBox}"
+				Text="{Binding SelectedCountryName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+		</Grid>
+		<!--#endregion-->
+
+		<!--#region Action toolbar-->
+		<ToolBarTray
+			Grid.Row="3"
+			Margin="10,2,0,2"
+			Style="{DynamicResource DefaultToolBarTray}">
+			<ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
+				<Button Click="ButtonNew" ToolTip="{StaticResource Edit.Country.Action.Tooltip.Add}">
+					<Image Style="{DynamicResource ToolBarAddIcon}" />
+				</Button>
+				<Button Click="ButtonDelete" ToolTip="{StaticResource Edit.Country.Action.Tooltip.Delete}">
+					<Image Style="{DynamicResource ToolBarDeleteIcon}" />
+				</Button>
+				<Button Click="ButtonSave" ToolTip="{StaticResource Edit.Country.Action.Tooltip.Save}">
+					<Image Style="{DynamicResource ToolBarSaveIcon}" />
+				</Button>
+			</ToolBar>
+		</ToolBarTray>
+		<!--#endregion-->
+
+		<!--#region Datagrid-->
+		<DataGrid
+			x:Name="CountryDataGrid"
+			Grid.Row="4" CanUserAddRows="False" CanUserDeleteRows="False"
+			Margin="10,5,10,5"
+			AutoGenerateColumns="False"
+			ItemsSource="{Binding Country, Mode=TwoWay}"
+			SelectedItem="{Binding SelectedCountry, Mode=TwoWay}"
+			SelectionChanged="SelectionChanged">
+			<DataGrid.Columns>
+				<DataGridTextColumn
+					Binding="{Binding CountryId}"
+					Header="{StaticResource Edit.Country.DataGrid.Header.Id}"
+					Visibility="Collapsed" />
+				<DataGridTextColumn
+					Width="*"
+					Binding="{Binding CountryName}"
+					Header="{StaticResource Edit.Country.DataGrid.Header.Name}" />
+			</DataGrid.Columns>
+		</DataGrid>
+		<!--#endregion-->
+
+		<!--#region Country export Status bar-->
+		<DockPanel
+				Grid.Row="5"
+				Height="30"
+				Margin="10,0,10,0"
+				VerticalAlignment="Center"
+				Background="LightGray">
+			<Grid>
+				<StackPanel Orientation="Horizontal">
+					<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Import.Statusline.Text}" />
+					<TextBlock
+							Name="dispStatusLine"
+							Style="{DynamicResource Status.Description}"
+							Text="{DynamicResource Import.Statusline.Description}" />
+				</StackPanel>
+			</Grid>
+		</DockPanel>
+		<!--#endregion-->
+
 	</Grid>
 </Page>
