--- a/Modelbouwer/View/WorktypeExport.xaml
+++ b/Modelbouwer/View/WorktypeExport.xaml
@@ -8,111 +8,102 @@
 	Title="WorktypeExport"
 	mc:Ignorable="d">
 
-	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}"
-            Style="{DynamicResource MainBorder}">
+	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
 		<Grid>
 			<Grid.RowDefinitions>
-				<RowDefinition Height="50"/>
-				<RowDefinition Height="90"/>
-				<RowDefinition Height="*"/>
-				<RowDefinition Height="50"/>
+				<RowDefinition Height="50" />
+				<RowDefinition Height="90" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="50" />
 			</Grid.RowDefinitions>
 
 			<!--  region Title of the page  -->
-			<StackPanel Grid.Row="0"
-                    Orientation="Vertical">
+			<StackPanel Grid.Row="0" Orientation="Vertical">
 				<Grid>
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition Width="*"/>
-						<ColumnDefinition Width="2*"/>
+						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="2*" />
 					</Grid.ColumnDefinitions>
 
 					<TextBlock
-                        Grid.Column="0"
-                        Style="{DynamicResource Title}"
-                        Text="{StaticResource Export.WorkType.Title}"/>
+						Grid.Column="0"
+						Style="{DynamicResource Title}"
+						Text="{StaticResource Export.WorkType.Title}" />
 				</Grid>
-				<Path Style="{DynamicResource TitleLine}"/>
+				<Path Style="{DynamicResource TitleLine}" />
 				<TextBlock
-                    Grid.Column="0"
-                    Style="{DynamicResource SubTitle}"
-                    Text="{StaticResource Export.WorkType.Subtitle}"/>
+					Grid.Column="0"
+					Style="{DynamicResource SubTitle}"
+					Text="{StaticResource Export.WorkType.Subtitle}" />
 			</StackPanel>
 			<!--  endregion Title of the page  -->
 
 			<!--#region Folder selection area-->
-			<StackPanel Grid.Row="1"
-                    Orientation="Vertical">
+			<StackPanel Grid.Row="1" Orientation="Vertical">
 				<Grid Margin="0,25">
 					<Grid.RowDefinitions>
-						<RowDefinition Height="50"/>
+						<RowDefinition Height="50" />
 					</Grid.RowDefinitions>
 
 					<Grid.ColumnDefinitions>
-						<ColumnDefinition x:Name="columnExportButton"
-                                Width="{StaticResource Column.Export.Button.Width}"/>
-						<ColumnDefinition x:Name="columnSelectFolderButton"
-                                Width="{StaticResource Column.SelectFolder.Button.Width}"/>
-						<ColumnDefinition Width="*"/>
+						<ColumnDefinition x:Name="columnExportButton" Width="{StaticResource Column.Export.Button.Width}" />
+						<ColumnDefinition x:Name="columnSelectFolderButton" Width="{StaticResource Column.SelectFolder.Button.Width}" />
+						<ColumnDefinition Width="*" />
 					</Grid.ColumnDefinitions>
 					<Button
-                        x:Name="btnExport"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Width="150"
-                        Height="50"
-                        Margin="5,0,0,0"
-                        HorizontalAlignment="Left"
-                        VerticalAlignment="Top"
-                        Click="Export"
-                        Style="{StaticResource ButtonRoundedWhite}"
-                        ToolTip="{StaticResource Export.Button.Tooltip}">
+						x:Name="btnExport"
+						Grid.Row="0"
+						Grid.Column="0"
+						Width="150"
+						Height="50"
+						Margin="5,0,0,0"
+						HorizontalAlignment="Left"
+						VerticalAlignment="Top"
+						Click="Export"
+						Style="{StaticResource ButtonRoundedWhite}"
+						ToolTip="{StaticResource Export.Button.Tooltip}">
 						<StackPanel Orientation="Horizontal">
-							<Image Source="{StaticResource Export}"/>
-							<StackPanel Margin="5,0,0,0"
-                                    Orientation="Vertical">
-								<TextBlock HorizontalAlignment="Center"
-                                        Text="{StaticResource Export.Button.Label}"/>
-								<TextBlock HorizontalAlignment="Center"
-                                        Text="{StaticResource Export.WorkType.Button.Text}"/>
+							<Image Source="{StaticResource Export}" />
+							<StackPanel Margin="5,0,0,0" Orientation="Vertical">
+								<TextBlock HorizontalAlignment="Center" Text="{StaticResource Export.Button.Label}" />
+								<TextBlock HorizontalAlignment="Center" Text="{StaticResource Export.WorkType.Button.Text}" />
 							</StackPanel>
 						</StackPanel>
 					</Button>
 					<Button
-                        x:Name="btnChooseFolder"
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Click="SelectFolder"
-                        Style="{DynamicResource ButtonRoundedWhite}">
-						<Image Source="{StaticResource searchfolder}"
-                                Stretch="Uniform"/>
+						x:Name="btnChooseFolder"
+						Grid.Row="0"
+						Grid.Column="1"
+						Click="SelectFolder"
+						Style="{DynamicResource ButtonRoundedWhite}">
+						<Image Source="{StaticResource searchfolder}" Stretch="Uniform" />
 					</Button>
 					<TextBlock
-                        Name="dispFolderName"
-                        Grid.Row="0"
-                        Grid.Column="2"
-                        Width="Auto"
-                            Margin="15,0,0,0"
-                        VerticalAlignment="Center"
-                        Text="{StaticResource Export.Button.Foldername}"/>
+						Name="dispFolderName"
+						Grid.Row="0"
+						Grid.Column="2"
+						Width="Auto"
+						Margin="15,0,0,0"
+						VerticalAlignment="Center"
+						Text="{StaticResource Export.Button.Foldername}" />
 				</Grid>
 			</StackPanel>
 			<!--#endregion-->
 
 			<!--#region WorkType export Status bar-->
-			<DockPanel Grid.Row="3"
-                       Height="30"
-                       Margin="5"
-                       VerticalAlignment="Center"
-                       Background="LightGray">
+			<DockPanel
+				Grid.Row="3"
+				Height="30"
+				Margin="5"
+				VerticalAlignment="Center"
+				Background="LightGray">
 				<Grid>
 					<StackPanel Orientation="Horizontal">
-						<TextBlock Style="{DynamicResource Status.Label}"
-                                Text="{StaticResource Export.Statusline.Text}"/>
+						<TextBlock Style="{DynamicResource Status.Label}" Text="{StaticResource Export.Statusline.Text}" />
 						<TextBlock
-                            Name="dispStatusLine"
-                            Style="{DynamicResource Status.Description}"
-                            Text="{DynamicResource Export.Statusline.Description}"/>
+							Name="dispStatusLine"
+							Style="{DynamicResource Status.Description}"
+							Text="{DynamicResource Export.Statusline.Description}" />
 					</StackPanel>
 				</Grid>
 			</DockPanel>
